--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@
     version = "0.1.0"
     description = "Default template for PDM package"
     authors = [{ name = "lolikonloli", email = "lolikonloli@163.com" }]
-    requires-python = "==3.9.*"
+    requires-python = ">=3.8"
     readme = "README.md"
     license = { text = "MIT" }
 
